Fixed spacing on posts/pages.

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -887,7 +887,7 @@
 /* Main */
 
 	#main {
-		padding: 1em 0;
+		padding: 4em 0 0 0;
 	}
 
 /* Footer */
